Update dependencies and fix spelling mistakes

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
   <style>
     /* 
-    * Each <div> tag is a View class or CollecionView class implementation
-    * Therefore we mark each div's borders in order to be able to differentiate
+    * Each <div> tag is a View class or CollectionView class implementation
+    * Therefore we mark each div border in order to be able to differentiate
     * them from one another.
     */
     div {
@@ -25,6 +25,6 @@
     -->
     <div id="root"></div>
 
-    <script src="./src/index.ts"></script>
+    <script src="./bundle.js"></script>
   </body>
 </html>
